--- a/Estruturas Web  Estilizações/style.css
+++ b/Estruturas Web  Estilizações/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
   background-color: #f4f4f4;
@@ -11,6 +11,7 @@ body {
 }
 
 header {
+  font-family: "Lora", serif;
   background-color: #0056b3;
   color: #fff;
   padding: 10px 0;
@@ -55,7 +56,7 @@ nav ul li a.btn {
 }
 
 .hero {
-  background-color: #003366;
+  background: linear-gradient(to bottom, #003366, #0066cc);
   color: #fff;
   padding: 50px 0;
   position: relative;
@@ -68,6 +69,7 @@ nav ul li a.btn {
 }
 
 .hero-text {
+  font-family: "Lora", serif;
   max-width: 60%;
   position: relative;
 }
@@ -84,7 +86,7 @@ nav ul li a.btn {
 .search-box {
   position: absolute;
   top: 220px;
-  left: 80%;
+  left: 83%;
   transform: translateX(-50%);
   background-color: #fff;
   border-radius: 8px;
@@ -99,6 +101,7 @@ nav ul li a.btn {
 
 .search-box input[type="text"],
 .search-box input[type="date"] {
+  font-family: "Roboto", sans-serif;
   padding: 10px;
   border-radius: 5px;
   border: 1px solid #ddd;
@@ -166,10 +169,9 @@ nav ul li a.btn {
   background-color: #fff;
   padding: 40px 0;
 }
-
 /* Estilo dos cartões */
 .location-card {
-  background-color: #fff;
+  background: linear-gradient(to bottom, #003366, #00bcd4);
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
@@ -178,15 +180,31 @@ nav ul li a.btn {
   width: calc(25% - 20px);
   box-sizing: border-box;
   margin-top: 40px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-/* Tamanho fixo para as imagens dos cards */
 .location-card img {
   width: 100%;
   height: 150px;
   object-fit: cover;
   border-radius: 8px;
   margin-bottom: 15px;
+}
+
+.location-card h3 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+  color: #fff;
+}
+
+.location-card p {
+  font-size: 1rem;
+  color: #fff;
+}
+
+.location-card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Aumenta a sombra */
 }
 
 /* Grid para dispor os cartões */
@@ -248,7 +266,7 @@ nav ul li a.btn {
 }
 
 .promo-text p .highlight {
-  color: rgb(232, 232, 26);
+  color: #f1c40f;
   font-weight: bold;
 }
 
@@ -282,6 +300,7 @@ footer {
 }
 
 .footer-site {
+  font-family: "Lora", serif;
   background-color: #f1c40f;
   color: #000;
   padding: 10px;
