--- a/Estruturas Web  Estilizações/style.css
+++ b/Estruturas Web  Estilizações/style.css
@@ -195,11 +195,13 @@ nav ul li a.btn {
   font-size: 1.5rem;
   margin-bottom: 10px;
   color: #fff;
+  text-align: left;
 }
 
 .location-card p {
   font-size: 1rem;
   color: #fff;
+  text-align: left;
 }
 
 .location-card:hover {
