--- a/Estruturas Web  Estilizações/style.css
+++ b/Estruturas Web  Estilizações/style.css
@@ -205,8 +205,8 @@ nav ul li a.btn {
 }
 
 .location-card:hover {
-  transform: scale(1.05);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Aumenta a sombra */
+  background: linear-gradient(to bottom, #FFD700, #FFA500);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); 
 }
 
 /* Grid para dispor os cartões */
@@ -215,6 +215,21 @@ nav ul li a.btn {
   flex-wrap: wrap;
   gap: 20px;
   justify-content: space-between;
+}
+
+.btn {
+  background-color: #FFD700;
+  color: #003366;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
+
+.btn:hover {
+  background-color: #ffe57f;
 }
 
 /* Responsividade para telas menores */
@@ -308,4 +323,124 @@ footer {
   padding: 10px;
   text-align: center;
   width: 100%;
+}
+
+/* Responsividade para telas de tablets */
+@media (max-width: 768px) {
+  .container {
+    width: 90%;
+  }
+
+  header .container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  nav ul {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  nav ul li {
+    margin: 5px 0;
+  }
+
+  .hero .container {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .hero-image {
+    margin-top: 20px;
+    max-width: 80%;
+  }
+
+  .promo .container {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .promo-text h2,
+  .promo-text p {
+    margin-right: 0;
+  }
+
+  .promo-image img {
+    width: 100%;
+    margin-top: 20px;
+  }
+
+  .locations .container {
+    flex-direction: column;
+  }
+
+  .location-card {
+    width: 100%;
+  }
+
+  .search-box {
+    left: 50%;
+    top: 100px;
+    transform: translateX(-50%);
+    width: 90%;
+  }
+}
+
+/* Responsividade para telas de celulares */
+@media (max-width: 480px) {
+  .container {
+    width: 95%;
+  }
+
+  header .container {
+    padding: 10px;
+  }
+
+  header h1 {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+
+  .hero .container {
+    padding: 20px 0;
+  }
+
+  .hero-text h2 {
+    font-size: 1.5rem;
+  }
+
+  .hero-text p {
+    font-size: 1rem;
+  }
+
+  .search-box {
+    width: 100%;
+    padding: 15px;
+    margin-top: 22.5rem;
+  }
+
+  .locations .container {
+    padding: 20px 0;
+  }
+
+  .promo .container {
+    padding: 20px;
+  }
+
+  .promo-text h2 {
+    font-size: 1.5rem;
+  }
+
+  .promo-text p {
+    font-size: 1rem;
+  }
+
+  footer {
+    padding: 10px 0;
+  }
+
+  .footer-site {
+    font-size: 1rem;
+    padding: 5px;
+  }
 }
