--- a/Estruturas Web  Estilizações/style.css
+++ b/Estruturas Web  Estilizações/style.css
@@ -5,6 +5,52 @@ body {
   background-color: #f4f4f4;
 }
 
+/* Define a altura e o estilo para a seção parallax */
+.parallax-section {
+  background-image: url('assets/1223857-mulher-bonita-perto-piscina-hotel-foto.jpg'); 
+  height: 500px; 
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.parallax-section h2 {
+  font-size: 2.5rem;
+  margin: 0;
+  padding: 20px;
+  background: rgba(0, 0, 0, 0.5); 
+  border-radius: 10px;
+}
+
+#backToTop {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #003366;
+  color: white;
+  border: none;
+  padding: 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: opacity 0.3s ease;
+}
+
+#backToTop.show {
+  display: block;
+  opacity: 1;
+}
+
+#backToTop:hover {
+  background-color: #28a745;
+}
+
 .container {
   width: 80%;
   margin: 0 auto;
@@ -180,6 +226,8 @@ nav ul li a.btn {
   width: calc(25% - 20px);
   box-sizing: border-box;
   margin-top: 40px;
+  position: relative;
+  overflow: hidden;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -189,6 +237,11 @@ nav ul li a.btn {
   object-fit: cover;
   border-radius: 8px;
   margin-bottom: 15px;
+  transition: transform 0.3s ease;
+}
+
+.location-card:hover img {
+  transform: scale(1.1);
 }
 
 .location-card h3 {
@@ -196,12 +249,24 @@ nav ul li a.btn {
   margin-bottom: 10px;
   color: #fff;
   text-align: left;
+  position: relative;
+  z-index: 1;
+  transition: all 0.3s ease;
 }
 
 .location-card p {
   font-size: 1rem;
   color: #fff;
   text-align: left;
+  position: relative;
+  z-index: 1;
+  transition: all 0.3s ease;
+}
+
+.location-card:hover h3,
+.location-card:hover p {
+  transform: translateY(-10px);
+  opacity: 1;
 }
 
 .location-card:hover {
