--- a/RevisãoReact/revisaoreact/src/App.css
+++ b/RevisãoReact/revisaoreact/src/App.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background-color: #8A2BE2;
+  background-color: #8758FF;
   color: #fff;
   display: flex;
   justify-content: center;
@@ -11,7 +11,7 @@ body {
 }
 
 .app {
-  background-color: #2C2C54;
+  background-color: #1E123B;
   padding: 20px;
   border-radius: 10px;
   text-align: center;
@@ -28,11 +28,29 @@ h1 {
   font-size: 1.5em; 
 }
 
+.search-bar {
+  padding: 8px;
+  width: 100%;
+  max-width: 400px;
+  margin: 20px 0;
+  border-radius: 8px;
+  border: 2px solid #ccc;
+  outline: none;
+  font-size: 16px;
+  background-color: #1E123B;
+  color: #fff;
+}
+
+.search-bar::placeholder {
+  color: #aaa;
+}
+
 .new-task-button {
   background-color: #9370DB;
   border: none;
   padding: 10px 20px;
   color: #fff;
+  border: 2px #fff solid;
   border-radius: 5px;
   cursor: pointer;
   margin-top: 20px;
@@ -50,7 +68,7 @@ h1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #3C3C7A;
+  background-color: #6C45CE;
   padding: 10px;
   border-radius: 5px;
   margin-bottom: 10px;
@@ -86,7 +104,7 @@ h1 {
 }
 
 .modal-content {
-  background-color: #2C2C54;
+  background-color: #1E123B;
   padding: 20px;
   border-radius: 10px;
   width: 500px;
@@ -109,5 +127,6 @@ h1 {
   padding: 10px 20px;
   color: #fff;
   border-radius: 5px;
+  border: 2px #fff solid;
   cursor: pointer;
 }
